fix: Ajust row gap in to do list

--- a/src/app/core/modules/to-do-list/to-do-list.component.scss
+++ b/src/app/core/modules/to-do-list/to-do-list.component.scss
@@ -25,6 +25,6 @@ section {
     .cards-section {
         display: flex;
         flex-direction: column;
-        row-gap: 20px;
+        row-gap: 41px;
     }
 }
